--- a/kasa-app/src/assets/styles/componentsStyles/Title.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Title.css
@@ -1,3 +1,5 @@
+/* TITLE COMPONENT STYLE FOR DESKTOP */
+
 .Title--name {
 	height: 67%;
 	font-size: 36px;
@@ -18,20 +20,26 @@
 	align-items: center;
 }
 
+/* TITLE COMPONENT STYLE FOR TABLET */
+
 @media all and (max-width: 992px) {
 	.Title--name {
 		font-size: 24px;
 	}
+
 	.Title--location {
 		font-size: 16px;
 	}
 }
+
+/* TITLE COMPONENT STYLE FOR MOBILE */
 
 @media all and (max-width: 375px) {
 	.Title--name {
 		font-size: 18px;
 		height: 46px;
 	}
+
 	.Title--location {
 		font-size: 14px;
 		height: 22px;
