--- a/kasa-app/src/assets/styles/pagesStyles/index.css
+++ b/kasa-app/src/assets/styles/pagesStyles/index.css
@@ -3,16 +3,16 @@
 *,
 ::before,
 ::after {
-	box-sizing: content-box;
+    box-sizing: content-box;
 }
 
 body {
-	font-family: "Montserrat";
+    font-family: 'Montserrat';
 }
 
 #root {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-decoration: none;
 }
